--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,21 +1,35 @@
+# This is an example .goreleaser.yml file with some sensible defaults.
+# Make sure to check the documentation at https://goreleaser.com
+before:
+  hooks:
+    # You may remove this if you don't use go modules.
+    - go mod tidy
+    # you may remove this if you don't need go generate
+    - go generate ./...
 builds:
-  - main: cmd/main.go
-    binary: leetcode-tool
-    ldflags: -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }} -X main.builtBy=goreleaser
+  - env:
+      - CGO_ENABLED=0
     goos:
+      - linux
       - windows
       - darwin
-      - linux
-    goarch:
-      - amd64
+archives:
+  - replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      386: i386
+      amd64: x86_64
+checksum:
+  name_template: 'checksums.txt'
+snapshot:
+  name_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
     exclude:
       - '^docs:'
-      - '^refactor'
-      - '^tweak'
-      - '^test'
+      - '^test:'
 brews:
   - tap:
       owner: zcong1993
